# casper-contract

./: .gitignore  .mcp.json  .mcp.json.example  Cargo.toml  README.md  SUBMISSION.md  rust-toolchain.toml
demo/: .env.example  CLAUDE_MCP_DEMO.md  agent-compute-demo.js  casper-demo.srt  casper-mcp.mjs  claude_desktop_config.example.json  compute-bridge.js  dashboard.html  demo.js  deploy.js  keygen.js  package-lock.json  package.json  serve-dashboard.js  test-mcp.mjs
docs/: ARCHITECTURE.md  DEMO_VIDEO.md  DEPLOYMENT.md
src/: main.rs
